overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: getting-started
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - staging.misfitknit.com
    secretName: getting-started-tls
  rules:
  - host: staging.misfitknit.com
    http:
      paths:
      - backend:
          service:
            name: getting-started
            port:
              number: 8000
        pathType: ImplementationSpecific
